Added MATC experience:   - I added this after the Unicity experience because the experience at Unicity     is the most important experience I have. Even though the teaching is a     newer job, that experience is not as important for the jobs that I am looking     at right now.

--- a/brett-michaelis-resume.html
+++ b/brett-michaelis-resume.html
@@ -231,9 +231,19 @@ Greater Salt Lake City Area<br/>
 <li>Recruit, hire and train development team</li>
 </ul>
 
-<h3 id="toc_5"><a href="http://www.uvu.edu">Utah Valley University</a>, Orem, UT</h3>
+<h3 id="toc_5"><a href="http://www.mlatc.edu">Mountainland Applied Technology College</a>, Lehi, UT</h3>
 
-<h5 id="toc_6">Assistant Director, Web Development - July 2005 to December 2010</h5>
+<h5 id="toc_6">Instructor, Software Development - September 2014 to present</h5>
+
+<ul>
+<li>Develop curriculum for beginning software development course</li>
+<li>Develop agile methodology for course delivery</li>
+<li>Guide student learning</li>
+</ul>
+
+<h3 id="toc_7"><a href="http://www.uvu.edu">Utah Valley University</a>, Orem, UT</h3>
+
+<h5 id="toc_8">Assistant Director, Web Development - July 2005 to December 2010</h5>
 
 <ul>
 <li>Developed internal applications</li>
@@ -242,9 +252,9 @@ Greater Salt Lake City Area<br/>
 <li>Technical lead for the department</li>
 </ul>
 
-<h3 id="toc_7">Achieve Learning Solutions, Orem, UT</h3>
+<h3 id="toc_9">Achieve Learning Solutions, Orem, UT</h3>
 
-<h5 id="toc_8">Web Programmer - July 2004 to August 2005</h5>
+<h5 id="toc_10">Web Programmer - July 2004 to August 2005</h5>
 
 <ul>
 <li>Developed and maintained custom Learning Management System (LMS)</li>
@@ -252,9 +262,9 @@ Greater Salt Lake City Area<br/>
 <li>Automated conversion of word documents to LMS course files</li>
 </ul>
 
-<h3 id="toc_9">United States Army, Iraq</h3>
+<h3 id="toc_11">United States Army, Iraq</h3>
 
-<h5 id="toc_10">Counterintelligence Agent/Team Sergeant - January 2003 to February 2004</h5>
+<h5 id="toc_12">Counterintelligence Agent/Team Sergeant - January 2003 to February 2004</h5>
 
 <ul>
 <li>You can ask me for details, but I&#39;m not going to publish them here, I&#39;m counter-intel</li>
@@ -262,11 +272,11 @@ Greater Salt Lake City Area<br/>
 
 <p><em>previous positions listed in <a href="https://www.linkedin.com/in/brettmichaelis">my linkedin profile</a></em></p>
 
-<h2 id="toc_11">Skills</h2>
+<h2 id="toc_13">Skills</h2>
 
-<p>Proficient in PHP, JavaScript, AngularJS, NodeJS, MySQL, MongoDB and bash scripting for linux system administration.</p>
+<p>Proficient in PHP, JavaScript, AngularJS, NodeJS, MySQL, MongoDB, Git and bash scripting for linux system administration.</p>
 
-<h2 id="toc_12">Education</h2>
+<h2 id="toc_14">Education</h2>
 
 <p>Bachelor of Science in Information Systems from Utah Valley University.
 Emphasis in E-Commerce. Graduated 2005.</p>
